@@ -1,3 +1,14 @@
+1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ObserverSwarm.h (ObserverSwarm): Make foodDisplay an object that
+	conforms to the Value2dDisplay protocol.  Make bugDisplay an
+	object that conforms to the Object2dDisplay protocol.
+
+	* FoodSpace.h: Include space/Discrete2d.h instead of space.h.
+
+	* ModelSwarm.h (ModelSwarm), Bug.h (Bug): Make world an object
+	that conforms to the Grid2d protocol.
+
 1998-03-18  Alex Lancaster  <alex@santafe.edu>
 
 	* ObserverSwarm.m: Import <activity.h> since it is referenced in
